CD-4 Add images and fix flex-wrap

--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -18,18 +18,24 @@
 }
 
 .images {
-    margin-top: 10%;
     display: flex;
     flex-grow: 2;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.image-container {
+    width: 300px;
+    height: 300px;
+    background: #1E1E1E;
+    border-radius: 150px;
+    margin: 50px auto;
 }
 
 .image {
     margin: auto;
     width: 300px;
     height: 300px;
-    background: #1E1E1E;
-    text-align: center;
-    padding-top: 125px;
     border-radius: 150px;
 }
 
